[gd_scene load_steps=3 format=3 uid="uid://b36bgixi5fiy2"]

[ext_resource type="Script" uid="uid://dsunsjfc2dmuo" path="res://ui/ui_scence/ui.gd" id="1_nb4k0"]

[sub_resource type="LabelSettings" id="LabelSettings_ks8t7"]
font_size = 32
font_color = Color(0.788235, 0.788235, 0.0745098, 1)

[node name="ui" type="CanvasLayer"]
script = ExtResource("1_nb4k0")

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 922.0
offset_top = 12.0
offset_right = 1040.0
offset_bottom = 57.0
text = "金钱: "
label_settings = SubResource("LabelSettings_ks8t7")

[node name="MessageLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 719.0
offset_top = 838.0
offset_right = 1110.0
offset_bottom = 967.0

[node name="EnemyCountsLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 822.0
offset_top = 568.0
offset_right = 1156.0
offset_bottom = 619.0

[node name="WaveProgress" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = 1632.0
offset_top = 1005.0
offset_right = 1897.0
offset_bottom = 1044.0
